<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.DetailsActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="164dp" />

    <TextView
        android:id="@+id/tv_suspects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_suspects"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_suspects_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green_health"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_suspects"
        tools:text="23" />

    <TextView
        android:id="@+id/tv_confirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_confirmed"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_end"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_confirmed_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/green_health"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirmed"
        tools:text="23" />

    <TextView
        android:id="@+id/tv_discarded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_descarted"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_suspects_detail" />

    <TextView
        android:id="@+id/tv_discarded_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/green_health"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_discarded"
        tools:text="23" />

    <TextView
        android:id="@+id/tv_monitoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_monitoring"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/tv_confirmed_detail" />

    <TextView
        android:id="@+id/tv_monitoring_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/green_health"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@+id/tv_discarded"
        tools:text="23" />

    <TextView
        android:id="@+id/tv_cured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_cured"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_discarded_detail" />

    <TextView
        android:id="@+id/tv_cured_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/green_health"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_cured"
        tools:text="23" />

    <TextView
        android:id="@+id/tv_isolation_house"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_isolation_house"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/tv_monitoring_detail" />

    <TextView
        android:id="@+id/tv_isolation_house_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/green_health"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@+id/tv_isolation_house"
        tools:text="23" />

    <TextView
        android:id="@+id/tv_isolation_hospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_isolation_hospital"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_cured_detail" />

    <TextView
        android:id="@+id/tv_isolation_hospital_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green_health"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_isolation_hospital"
        tools:text="23" />

    <TextView
        android:id="@+id/tv_confirmed_hospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_confirmed_hospital"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/tv_isolation_house_detail" />

    <TextView
        android:id="@+id/tv_iso_hospital_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/green_health"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirmed_hospital"
        tools:text="23" />

    <TextView
        android:id="@+id/tv_deads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_deads"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_isolation_hospital_detail" />

    <TextView
        android:id="@+id/tv_deads_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/green_health"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_deads"
        tools:text="23" />

    <TextView
        android:id="@+id/tv_date_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        tools:text="23/10/2021"
        android:textColor="@color/green_health"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_deads_detail" />

    <TextView
        android:id="@+id/tv_hour_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        tools:text="23:23"
        android:textSize="18sp"
        android:textColor="@color/green_health"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_detail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_back_details"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guide_start" />

</androidx.constraintlayout.widget.ConstraintLayout>